# vnvspec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING-CATALOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  mkdocs.yml  phase-progress.md  pyproject.toml
.github/ISSUE_TEMPLATE/: catalog-drift.md  catalog-suggestion.md
.github/workflows/: catalog-link-check.yml  ci.yml  docs.yml  release.yml  workflow.yml
.vnvspec/: pytest-self-report.json  self-assessment-report.html  self-assessment-report.json  self-spec.yaml
.vnvspec/dashboard/: index.html
actions/vnvspec/: action.yml
docs/: index.md
docs/adapters/: torch.md
docs/catalog/: standards-mapping.md
docs/concepts/: catalog.md  eve-spec.md  io-contract.md  requirement.md  spec-formats.md  spec.md
docs/development/: architecture.md  plan-self-assessment.md
docs/integrations/: github-actions.md  pytest.md
docs/migration/: v0.1-to-v0.2.md  v0.2-to-v0.3.md
docs/recipes/: per-phase-spec-files.md  test-runner-patterns.md
docs/standards/: eu-ai-act.md  iso-21448.md  iso-pas-8800.md  nist-ai-rmf.md  ul-4600.md
examples/01_tabular_mlp/: README.md  main.py
examples/02_bert_sentiment/: README.md  main.py
notebooks/: 01_student_intro.ipynb  02_se_professional.ipynb  03_ml_expert.ipynb  _generate_notebooks.py  _helpers.py
scripts/: check_v0_1_compat.py  check_v0_2_compat.py  self_assess.py  wave_a_plan_assessment.py
src/vnvspec/: __init__.py  _deprecation.py  _version.py  diff.py
tests/: conftest.py  test_deprecation.py  test_deps.py  test_diff.py  test_self_spec.py  test_smoke.py
tests/catalog/: conftest.py  test_base.py  test_demo.py
tests/cli/: test_catalog_cli.py  test_validate_cli.py
tests/collectors/: test_evidence.py
tests/core/: test_assessment.py  test_contract.py  test_evidence.py  test_gap_analysis.py  test_gtwr.py  test_hazard.py  test_odd.py  test_protocols.py  test_requirement.py  test_spec.py  test_trace.py
tests/exporters/: test_annex_iv.py  test_badge.py  test_compliance_matrix.py  test_dashboard.py  test_gsn_mermaid.py  test_html.py  test_json_export.py  test_markdown.py  test_shields_endpoint.py
tests/registries/: test_loader.py
tests/runners/: test_hypothesis_gen.py  test_pytest_gen.py
(+115 files in other folders)
