[project]
name = "vnvspec"
version = "0.0.1"
description = "V&V-grade specifications for engineered systems — AI, optimization, simulation, and physics."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Mansur Arief", email = "ariefm@stanford.edu" },
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "networkx>=3.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.optional-dependencies]
torch = [
    "torch>=2.3",
    "transformers>=4.40",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "codespell>=2.2",
    "pre-commit>=3.7",
    "networkx-stubs>=0.0.1",
    "pandas-stubs",
    "hypothesis>=6.100",
    "pandera[pandas]>=0.19",
]
all = [
    "vnvspec[torch,docs,dev]",
]

[project.scripts]
vnvspec = "vnvspec.cli.main:app"

[project.urls]
Homepage = "https://github.com/ai-vnv-lab/vnvspec"
Documentation = "https://vnvspec.dev"
Repository = "https://github.com/ai-vnv-lab/vnvspec"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vnvspec"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["vnvspec"]

[tool.coverage.report]
fail_under = 85
show_missing = true
